updating baams site

--- a/recycling/templates/recycling/about.html
+++ b/recycling/templates/recycling/about.html
@@ -78,8 +78,8 @@
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 relative ">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-9">
                 <div class="img-box">
-                    <img src="https://pagedone.io/asset/uploads/1702034769.png" alt="About Us"
-                        class="max-lg:mx-auto object-cover">
+
+                        <img class="max-lg:mx-auto object-cover" height="20px" src="{% static 'recycling/images/CEO.jpg' %}" alt="#" />
                 </div>
                 <div class="lg:pl-[100px] flex items-center">
                     <div class="data w-full">
@@ -88,11 +88,10 @@
                             About
                             Us </h2>
                         <p class="font-normal text-xl leading-8 text-gray-500 max-lg:text-center max-w-2xl mx-auto">
-                            Driven by a passion for seamless user experiences, we've meticulously curated pagedone
-                            to empower creators, designers, and developers alike. Our mission is to provide a
-                            comprehensive toolkit,
-                            enabling you to build intuitive, beautiful interfaces that resonate with users on every
-                            interaction.
+                           Ecobaams Africa is a tech-driven impact organization transforming waste into opportunity for people, the planet, and the future.
+                           We are on a mission to promote a cleaner environment, accessible healthcare, and quality education for underserved communities in Nigeria by merging innovation with social impact. Through our proprietary recycling technology and Trash-to-Earn platform, we collect and convert plastic waste into valuable eco-resources, which are used to support local industries and drive sustainable development.
+                           Our model is simple yet powerful:
+                           Waste collected from communities becomes a lifeline. For every plastic item saved from landfills, a child gets closer to school, a family gets closer to medical care, and a community gets closer to dignity and economic empowerment.
                         </p>
                     </div>
                 </div>
@@ -106,22 +105,25 @@
 
                 <div class="lg:pr-24 flex items-center">
                     <div class="data w-full">
-                        <img src="https://pagedone.io/asset/uploads/1702034785.png" alt="About Us tailwind page"
-                            class="block lg:hidden mb-9 mx-auto object-cover">
-                        <h2 class="font-manrope font-bold text-4xl lg:text-5xl text-black mb-9 max-lg:text-center">We
-                            are Creative Since 2005</h2>
+                        <!-- <img src="https://pagedone.io/asset/uploads/1702034785.png" alt="About Us page"
+                            class="block lg:hidden mb-9 mx-auto object-cover"> -->
+                        <h2 class="font-manrope font-bold text-2xl lg:text-2xl text-black mb-9 max-lg:text-center">Through programs like Trash-for-School and Trash-for-Health, we provide vulnerable populations with:</h2>
                         <p class="font-normal text-xl leading-8 text-gray-500 max-lg:text-center max-w-2xl mx-auto">
-                            Pagedone isn’t just a collection of components and guidelines; it's a philosophy. We go
-                            beyond aesthetics, prioritizing accessibility, scalability, and usability. Every element,
-                            from the tiniest
-                            detail to the grandest layout, is meticulously crafted to enhance functionality and elevate
-                            user
-                            satisfaction.
+                           •	School support for children and youth 
+                           <br>
+                           •	Basic healthcare access and health insurance
+                           <br>      
+                           •	Digital income opportunities through our tech platform
+                           <br>
+                           •	Affordable raw materials for local fashion and packaging industries
+                           <br>
+                           Ecobaams Africa is not just about recycling. We’re rethinking how we care for people and the planet—using proprietary technology, innovation, and community empowerment to create a world where no one is left behind.
+                           Join us in shaping a cleaner, Healthier , and brighter future.
                         </p>
                     </div>
                 </div>
                 <div class="img-box ">
-                    <img src="https://pagedone.io/asset/uploads/1702034785.png" alt="About Us tailwind page"
+                    <img src="{% static 'recycling/images/work2.jpg' %}" alt="About Us tailwind page"
                         class="hidden lg:block object-cover">
                 </div>
             </div>
@@ -196,14 +198,12 @@ We organize community cleanups to maintain safe and healthy environment for resi
          <div class="container">
             <div class="box">
                <div class="arrival_bg_box">
-                  <img src="{% static "recycling/images/p13.jpeg" %}" alt="">
+                  <img src="{% static "recycling/images/work1.jpg" %}" alt="">
                </div>
                <div class="row">
                   <div class="col-md-6 ml-auto">
                      <div class="heading_container remove_line_bt">
-                        <h2>
-                           About 
-                        </h2>
+                       
                      </div>
                      <p style="margin-top: 20px;margin-bottom: 30px;">
                            Ecodams Africa is a green tech enterprise that helps unemployed youth & low-income households monetize their plastic wastes to enhance good living. Through our trash-to-earn platform, indigent students, unemployed youth, and low-income households can access basic educational needs, basic healthcare, and daily necessities (food, transportation, energy) by transacting with their plastic waste in their community. Hence, helping to build a healthier and wealthier community & planet in Nigeria.
