--- a/recycling/templates/recycling/blog_list.html
+++ b/recycling/templates/recycling/blog_list.html
@@ -31,7 +31,7 @@
          <header class="header_section">
             <div class="container">
                <nav class="navbar navbar-expand-lg custom_nav-container ">
-                  <a class="navbar-brand" href="index.html"><img width="250" src="{% static "ecommerce/img/logo3.png" %}" alt="#" /></a>
+                  <a class="navbar-brand" href="index.html"><img width="250" src="{% static 'ecommerce/img/logo3.png' %}" alt="#" /></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class=""> </span>
                   </button>
@@ -90,7 +90,7 @@
             </div>
             <section class="text-gray-600 body-font">
   <div class="container px-5 py-24 mx-auto">
-    <div class="flex flex-wrap -m-4">
+    <div class="flex flex-wrap -m-4 justify-content-center">
       <div class="lg:w-1/3 lg:mb-0 mb-6 p-4">
         <div class="h-full text-center">
            <img alt="testimonial" class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-gray-200 bg-gray-100" src="{% static "recycling/images/hr2.png" %}">
@@ -105,14 +105,6 @@
            <h1 class="text-gray-900 font-bold title-font tracking-wider text-sm">Environmental</h1>
            <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-2 mb-1"></span>
           <p class="leading-relaxed">Over 5Thousand plastics waste recycled</p>
-        </div>
-      </div>
-       <div class="lg:w-1/3 lg:mb-0 mb-6 p-4">
-         <div class="h-full text-center">
-            <img alt="testimonial" class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-gray-200 bg-gray-100" src="{% static "recycling/images/empowerment.png" %}">
-            <h1 class="text-gray-900 font-bold title-font tracking-wider text-sm">Economics</h1>
-            <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-2 mb-1"></span>
-          <p class="leading-relaxed"></p>
         </div>
       </div>
     </div>
